# aoc23

./: Cargo.toml  rustfmt.toml
inputs/: 21a  23d
src/: 1.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  1a.i  2.rs  20.rs  21.rs  22.rs  23.rs  24.rs  3.rs  4.rs  5.rs  6.rs  7.rs  7b.rs  8.rs  9.rs  aoc1.rs  main.rs  main.rs.bk
